--- a/src/Components/ContentComponent.css
+++ b/src/Components/ContentComponent.css
@@ -1,5 +1,7 @@
 .wrapper{
     height: 100%;
+    background: url(../../public/img/glassesImage/background.jpg);
+    
 }
 .content{
     text-align: center;
