--- a/src/Components/ContentComponent.css
+++ b/src/Components/ContentComponent.css
@@ -1,7 +1,9 @@
 .wrapper{
     height: 100%;
     background: url(../../public/img/glassesImage/background.jpg);
-    
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-bottom: 30px;
 }
 .content{
     text-align: center;
@@ -16,25 +18,50 @@
 }
 .model{
     text-align: center;
+    margin-bottom: 30px;
 }
 .model img{
-    width: 50%;
+    width: 65%;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
 }
 .glasses-list {
-    background-color: white;
-    padding: 30px;
-    margin: 50px 0;
+    background-color: #f0e1e1;
+    padding: 20px;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 20%), 0 4px 20px 0 rgb(0 0 0 / 19%);
 }
 .glasses-item{
-    padding: 20px;
-    padding-top: 0;
+    padding: 10px;
 }
 .glasses-item img {
     border: 1px solid black;
     width: 100%;
     padding: 5px;
+    background-color: white;
 }
 .glasses-card{
     position: relative;
+    top: -90%;
+    left: 17.5%;
+    width: 65%;
+    height: 90%;
+}
+.glasses-info{
+    padding-top: 10px;
+    width: 100%;
+    margin: auto;
+    background-color: rgb(232 112 11 / 56%);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.glasses-card img{
+    width: 35%;
     opacity: 0.9;
+    box-shadow: none;
+}
+.glasses-model{
+    position: absolute;
+    width: 154%;
+    left: -27%;
+    top: 17%;
 }
